Copadodx/main/default/objects/Account/fields/Demo200__c.field-meta.xml
<CustomField>
    <fullName>Demo200__c</fullName>
    <label>Demo200</label>
    <length>255</length>
    <type>Text</type>
</CustomField>