Copadodx/main/default/objects/Account/fields/Field_Pull_request__c.field-meta.xml
<CustomField>
    <fullName>Field_Pull_request__c</fullName>
    <label>Field Pull request</label>
    <length>18</length>
    <type>Text</type>
</CustomField>