Copadodx/main/default/objects/Account/fields/Pull_Demo__c.field-meta.xml
<CustomField>
    <fullName>Pull_Demo__c</fullName>
    <label>Pull Demo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>