Copadodx/main/default/objects/Account/fields/test150__c.field-meta.xml
<CustomField>
    <fullName>test150__c</fullName>
    <label>test150</label>
    <length>18</length>
    <type>Text</type>
</CustomField>